fixed whitespace

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 
 .App {
-
   text-align: center;
+align-items: center;
 }
 
 .App-logo {
@@ -11,24 +11,30 @@
 .App-main {
   background-color: #282c34;
   min-height: 100vh;
-  /* min-width: 60vh; */
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  padding:0;
+  margin:0;
 }
 
 .article {
+  justify-self: center;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  padding-top: 38px;
+  padding-bottom:2vw;
+  margin:0;
+  max-width: 92vw;
 }
 
 .article-header-img {
-  max-height: 45vh;
+  max-height: 35vh;
   min-height: 15vh;
   border-style: double;
   border-block-width: 1px;
@@ -45,21 +51,22 @@
 }
 
 .article-main-body {
-  max-width: 95vw;
+  max-width: 92vw;
   background-color: #31353d;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   padding-top: 28px;
-  padding-left: 4vw;
-  padding-right: 4vw;
+  padding-left: 2vw;
+  padding-right: 2vw;
   padding-bottom: 20px;
   margin-bottom: 56px;
-  margin-left: 8vw;
-  margin-right: 8vw;
+  margin-left: 6vw;
+  margin-right: 6vw;
   border-style: double;
   border-block-width: 1px;
   border-color: black;
+  margin:0;
 }
 
 .article-main-text {
@@ -67,7 +74,7 @@
   border-style: double;
   border-block-width: 1px;
   border-color: black;
-  padding-top: 20px;
+  padding-top: px;
   padding-left: 20px;
   padding-right: 20px;
   padding-bottom: 20px;
@@ -87,7 +94,7 @@
   background-color: rgb(90, 14, 43);
   color: rgb(238, 202, 217);
   text-align: center;
-  padding: 14px 16px;
+  padding: 14px;
   text-decoration: none;
   font-size: 17px;
   position: fixed;
@@ -112,10 +119,6 @@
   padding-bottom: 1px;
 }
 
-.home {
-color: rgb(110, 22, 56);
-}
-
 .homeheader {
   border: 2px;
   margin: 40px;
@@ -124,6 +127,8 @@ color: rgb(110, 22, 56);
   padding-right: 240px;
   padding-bottom: 8px;
   font-size: 1.2em;
+  align-self: center;
+  color: rgb(110, 22, 56);
 }
 
 .homepage-mainbody {
@@ -146,6 +151,7 @@ color: rgb(110, 22, 56);
     font-family: Lucida, sans-serif;
   /* font-family: Palatino, URW Palladio L, serif; */
   font-size: 21px;
+  
 }
 
 .insidetext {
@@ -249,7 +255,7 @@ word-wrap: break-word;
   background-color: rgb(119, 22, 59);
   color: #f2f2f2;
   text-align: center;
-  padding: 14px 16px;
+  padding: 14px;
   text-decoration: none;
   font-size: 17px;
 }
